[project]
name = "ummu-aytam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "flask>=3.1.3",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "rich>=14.3.3",
    "ruff>=0.15.2",
]
